--- a/blog/package.json
+++ b/blog/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "next-sitemap": "^4.1.8",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
