--- a/blog/package.json
+++ b/blog/package.json
@@ -19,7 +19,11 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.9",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "next-sitemap": "^4.1.8",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
