--- a/nextjs_sns/front/package.json
+++ b/nextjs_sns/front/package.json
@@ -10,28 +10,17 @@
   "author": "choisis",
   "license": "ISC",
   "dependencies": {
-    "@ant-design/compatible": "^5.1.2",
     "@ant-design/icons": "^5.2.5",
-    "@faker-js/faker": "^8.0.2",
-    "@reduxjs/toolkit": "^1.5.0",
     "antd": "^5.8.3",
-    "axios": "^1.3.4",
-    "cross-env": "^7.0.2",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
-    "next": "^13.4.13",
-    "next-redux-wrapper": "^8.1.0",
-    "pm2": "^5.3.0",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-slick": "^0.29.0",
+    "next": "^9.5.4",
+    "next-redux-wrapper": "^6.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-slick": "^0.27.11",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "shortid": "^2.2.16",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^6.0.7",
-    "swr": "^2.1.1"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
